Preparacion para lanzamiento 1.3.0-beta
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,12 @@
     <string name="app_name" translatable="false">LastQuakeChile</string>
 
     <string name="ADMOB_MASTER_KEY" translatable="false">ca-app-pub-6355378855577476~7414287525</string>
+    <!-- PROD AD-->
+    <string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-6355378855577476/9207230747</string>
+    <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-6355378855577476/7649578822</string>
     <!--TEST AD-->
-    <string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
-    <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
+    <!--<string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-3940256099942544/5224354917</string>-->
 
     <!-- TOOLBAR Menu STRINGS -->
     <string name="refresh">Recargar</string>
@@ -19,11 +22,14 @@
     <string name="tab_reports">Reportes</string>
 
     <!-- URL SERVIDOR HEROKU -->
-    <string name="URL_GET_PROD" translatable="false">
+    <string name="URL_GET_PROD_QUAKES" translatable="false">
 		https://lastquakechile-server-prod.herokuapp.com/lastquakechile/api/quakes/?limite=%1$s
 	</string>
     <string name="URL_GET_DEV" translatable="false">
 		https://lastquakechile-server-dev.herokuapp.com/lastquakechile/api/quakes/?limite=%1$s
+	</string>
+    <string name="URL_GET_PROD_REPORTS" translatable="false">
+		https://lastquakechile-server-prod.herokuapp.com/lastquakechile/api/reports
 	</string>
     <string name="DEEP_LINK" translatable="false">https://lastquakechile.page.link/lqch</string>
     <string name="desde_deep_link" translatable="false">desdeDeepLink</string>
