--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,13 +140,13 @@
     <string name="top_ciudades_con_m_s_sismos">Top ciudades con más sismos</string>
 
     <!-- FIREBASE-->
-    <string name="TAG_FIREBASE_TOKEN" translatable="false">TOKEN_FIREBASE</string>
-    <string name="TAG_FIREBASE_SUSCRIPTION" translatable="false">FIREBASE_SUSCRIPCION</string>
+    <string name="TAG_FIREBASE_TOKEN" translatable="false">D/TOKEN_FIREBASE:</string>
+    <string name="TAG_FIREBASE_SUSCRIPTION" translatable="false">D/FIREBASE_SUSCRIPCION:</string>
     <string name="TAG_FIREBASE_SUSCRIPTION_OK" translatable="false">SUSCRITO</string>
     <string name="TAG_FIREBASE_SUSCRIPTION_ALREADY" translatable="false">YA ESTABA SUSCRITO</string>
     <string name="TAG_FIREBASE_SUSCRIPTION_DELETE" translatable="false">ELIMINADA</string>
-    <string name="TAG_FIREBASE_CHANNEL" translatable="false">FIREBASE_CHANNEL</string>
-    <string name="TAG_FIREBASE_MESSAGE" translatable="false">FIREBASE_MESSAGE</string>
+    <string name="TAG_FIREBASE_CHANNEL" translatable="false">D/FIREBASE_CHANNEL:</string>
+    <string name="TAG_FIREBASE_MESSAGE" translatable="false">D/FIREBASE_MESSAGE:</string>
     <string name="TAG_FIREBASE_MESSAGE_DATA_INCOMING" translatable="false">NotificacionData
 		recibida
 	</string>
@@ -183,15 +183,15 @@
 
     <!-- TAGS SIN CATEGORIA-->
     <string name="FLAG_RETRY" translatable="false">Recargar</string>
-    <string name="TAG_FRAGMENT_QUAKE" translatable="false">FRAGMENT_QUAKE</string>
-    <string name="TAG_FRAGMENT_REPORTS" translatable="false">FRAGMENT_REPORTS</string>
+    <string name="TAG_FRAGMENT_QUAKE" translatable="false">D/FRAGMENT_QUAKE: </string>
+    <string name="TAG_FRAGMENT_REPORTS" translatable="false">D/FRAGMENT_REPORTS: </string>
     <string name="FRAGMENT_LOAD_LIST" translatable="false">Listado cargado</string>
-    <string name="TAG_JSON_GENERAL_ERROR" translatable="false">JSON_GENERAL_ERROR</string>
-    <string name="TAG_JSON_PARSE_ERROR" translatable="false">JSON_PARSE_ERROR</string>
+    <string name="TAG_JSON_GENERAL_ERROR" translatable="false">D/JSON_GENERAL_ERROR: </string>
+    <string name="TAG_JSON_PARSE_ERROR" translatable="false">D/JSON_PARSE_ERROR: </string>
     <string name="TAG_CONNECTION_OK" translatable="false">CONNECTION_OK</string>
     <string name="CONNECTION_OK_RESPONSE" translatable="false">Conexion correcta</string>
     <string name="CONNECTED" translatable="false">CONNECTION_STATUS</string>
-    <string name="TAG_CARD_VIEW_INFO" translatable="false">CARD_VIEW_INFO</string>
+    <string name="TAG_CARD_VIEW_INFO" translatable="false">D/CARD_VIEW_INFO: </string>
     <string name="TAG_FIRST_RUN_STATUS" translatable="false">FIRST_RUN</string>
     <string name="FIRST_RUN_STATUS_RESPONSE" translatable="false">EJECUCION DE PRIMER INICIO
 	</string>
@@ -206,15 +206,15 @@
     <string name="TAG_VERSION_CODE_APP" translatable="false">VERSION_CODE_APP</string>
 
     <!-- Strings de Volley -->
-    <string name="TAG_VOLLEY_ERROR" translatable="false">VOLLEY_ERROR</string>
+    <string name="TAG_VOLLEY_ERROR" translatable="false">D/VOLLEY_ERROR: </string>
     <string name="TAG_VOLLEY_ERROR_TIMEOUT" translatable="false">Timeout error</string>
     <string name="TAG_VOLLEY_ERROR_SERVER" translatable="false">Server error</string>
     <string name="TAG_VOLLEY_ERROR_NETWORK" translatable="false">Network error</string>
-    <string name="TAG_CONNECTION_SERVER_RESPALDO" translatable="false">SERVIDOR RESPALDO</string>
+    <string name="TAG_CONNECTION_SERVER_RESPALDO" translatable="false">D/SERVIDOR RESPALDO: </string>
     <string name="TAG_CONNECTION_SERVER_RESPALDO_RESPONSE" translatable="false">INTENTO DE CONEXION
 		A RESPALDO (DEVELOPMENT)
 	</string>
-    <string name="TAG_CONNECTION_SERVER_OFICIAL" translatable="false">SERVIDOR OFICIAL</string>
+    <string name="TAG_CONNECTION_SERVER_OFICIAL" translatable="false">D/SERVIDOR OFICIAL: </string>
     <string name="TAG_CONNECTION_SERVER_OFICIAL_RESPONSE" translatable="false">INTENTO DE CONEXION A
 		OFICIAL (PRODUCTION)
 	</string>
@@ -231,7 +231,7 @@
     <string name="VIEWMODEL_SERVER_ERROR">¡Ups ha ocurrido un error! Intente mas tarde</string>
 
     <!-- INTENT LOGS -->
-    <string name="TAG_INTENT" translatable="false">INTENT</string>
+    <string name="TAG_INTENT" translatable="false">D/INTENT: </string>
     <string name="TAG_INTENT_GOOGLEPLAY" translatable="false">Abriendo google play app - $s</string>
     <string name="TAG_INTENT_NAVEGADOR" translatable="false">Abriendo navegador - $s</string>
     <string name="TRY_INTENT_NOTIFICATION_1" translatable="false">Realizando intent de
@@ -239,13 +239,13 @@
 	</string>
     <string name="TRY_INTENT_NOTIFICATION" translatable="false">TRY_INTENT_NOTIFICATION</string>
     <string name="TRY_INTENT_DETALLE" translatable="false">Intent de detalle de sismo</string>
-    <string name="TAG_INTENT_DETALLE_HOME_UP" translatable="false">QUAKE_DETAILS</string>
+    <string name="TAG_INTENT_DETALLE_HOME_UP" translatable="false">D/QUAKE_DETAILS: </string>
     <string name="TAG_INTENT_DETALLE_HOME_UP_RESPONSE" translatable="false">HOME UP PARENT
 		CLICKEADO
 	</string>
 
     <!-- TAG GOOGLE PLAY -->
-    <string name="TAG_GOOGLE_PLAY" translatable="false">GOOGLE_PLAY</string>
+    <string name="TAG_GOOGLE_PLAY" translatable="false">D/GOOGLE_PLAY: </string>
     <string name="GOOGLE_PLAY_NOSOPORTADO" translatable="false">Dispositivo no soportado</string>
     <string name="GOOGLE_PLAY_ACTUALIZADO" translatable="false">Google Play actualizado</string>
 
@@ -267,18 +267,18 @@
     <string name="SHARED_PREF_END_REWARD_TIME" translatable="false">end_reward_time</string>
 
     <!-- INTENT SHARE LOGS -->
-    <string name="TAG_INTENT_SHARE" translatable="false">SHARE_INTENT</string>
+    <string name="TAG_INTENT_SHARE" translatable="false">D/SHARE_INTENT: </string>
     <string name="TAG_INTENT_SHARE_WSP" translatable="false">WHATSAPP SHARE INTENT</string>
     <string name="TAG_INTENT_SHARE_GM" translatable="false">GMAIL SHARE INTENT</string>
-    <string name="TAG_FAB_MENU" translatable="false">FAB MENU</string>
+    <string name="TAG_FAB_MENU" translatable="false">D/FAB MENU: </string>
     <string name="TAG_FAB_MENU_OPEN" translatable="false">OPEN</string>
     <string name="TAG_FAB_MENU_CLOSE" translatable="false">CLOSE</string>
-    <string name="TAG_OVERLAY_DETAILS" translatable="false">OVERLAY-DETAILS</string>
+    <string name="TAG_OVERLAY_DETAILS" translatable="false">D/OVERLAY-DETAILS: </string>
     <string name="TAG_OVERLAY_DETAILS_RESULT" translatable="false">CLICKED</string>
     <string name="HOME_PARENT">Navegar hacia arriba</string>
 
     <!-- MAPA -->
-    <string name="TAG_MAP_FRAGMENT" translatable="false">MAP FRAGMENT</string>
+    <string name="TAG_MAP_FRAGMENT" translatable="false">D/MAP FRAGMENT: </string>
     <string name="TAG_INFO_WINDOWS_RESPONSE" translatable="false">INFO WINDOWS OPEN</string>
     <string name="TAG_MAP_READY_RESPONSE" translatable="false">MAP READY</string>
     <string name="TAG_INTENT_INFO_WINDOWS" translatable="false">Intent de infowindows a detalle de
@@ -288,7 +288,7 @@
     <!-- NightMode -->
     <string name="NIGHT_MODE_MANUAL_KEY" translatable="false">pref_manual_night_mode</string>
     <string name="NIGHT_MODE_AUTO_KEY" translatable="false">pref_auto_night_mode</string>
-    <string name="TAG_NIGHT_MODE_MANUAL" translatable="false">NIGHT MODE MANUAL</string>
+    <string name="TAG_NIGHT_MODE_MANUAL" translatable="false">D/NIGHT MODE MANUAL: </string>
     <string name="TAG_NIGHT_MODE_STATUS_ON" translatable="false">ON</string>
     <string name="TAG_NIGHT_MODE_STATUS_OFF" translatable="false">OFF</string>
     <string name="TAG_NIGHT_MODE_AUTO" translatable="false">NIGHT MODE AUTO</string>
@@ -312,31 +312,30 @@
 
     <!-- REWARD DIALOG TAGS -->
     <string name="REWARD_DIALOG" translatable="false">RewardDialog</string>
-    <string name="TAG_REWARD_DIALOG" translatable="false">REWARD_DIALOG_STATUS</string>
+    <string name="TAG_REWARD_DIALOG" translatable="false">D/REWARD_DIALOG_STATUS: </string>
     <string name="TAG_REWARD_DIALOG_BTN_VER_VIDEO" translatable="false">BOTON VER VIDEO PRESIONADO</string>
     <string name="TAG_REWARD_DIALOG_BTN_CANCEL" translatable="false">BOTON CANCEL PRESIONADO</string>
-    <string name="TAG_VIDEO_REWARD_STATUS" translatable="false">VIDEO_REWARD_STATUS</string>
+    <string name="TAG_VIDEO_REWARD_STATUS" translatable="false">D/VIDEO_REWARD_STATUS: </string>
     <string name="TAG_VIDEO_REWARD_STATUS_LOADED" translatable="false">LOADED</string>
     <string name="TAG_VIDEO_REWARD_STATUS_REWARDED" translatable="false">REWARDED</string>
     <string name="TAG_VIDEO_REWARD_STATUS_COMPLETED" translatable="false">COMPLETED</string>
-    <string name="TAG_POST_REWARD_HORA_AHORA" translatable="false">POST_REWARD_HORA_AHORA</string>
+    <string name="TAG_POST_REWARD_HORA_AHORA" translatable="false">D/POST_REWARD_HORA_AHORA: </string>
     <string name="TAG_POST_REWARD_HORA_REWARD" translatable="false">POST_REWARD_HORA_REWARD</string>
-    <string name="TAG_REWARD_STATUS" translatable="false">REWARD_STATUS</string>
+    <string name="TAG_REWARD_STATUS" translatable="false">D/REWARD_STATUS: </string>
     <string name="TAG_REWARD_STATUS_EN_PERIODO" translatable="false">EN PERIODO REWARD</string>
     <string name="TAG_REWARD_STATUS_PERIODO_INACTIVO" translatable="false">PERIODO REWARD INACTIVO</string>
-    <string name="TAG_RANDOM_SHOW_REWARD_DIALOG" translatable="false">RANDOM_SHOW</string>
+    <string name="TAG_RANDOM_SHOW_REWARD_DIALOG" translatable="false">D/RANDOM_SHOW: </string>
     <string name="TAG_RANDOM_SHOW_REWARD_DIALOG_ON" translatable="false">MOSTRAR DIALOG REWARD</string>
     <string name="TAG_RANDOM_SHOW_REWARD_DIALOG_OFF" translatable="false">NO MOSTRAR DIALOG REWARD</string>
     <string name="TAG_FRAGMENT_REWARD_DATE" translatable="false">FRAGMENT_REWARD_DATE</string>
-    <string name="TAG_FRAGMENT_LIST" translatable="false">FRAGMENT_LIST</string>
+    <string name="TAG_FRAGMENT_LIST" translatable="false">D/FRAGMENT_LIST: </string>
     <string name="TAG_ADS_LOADED" translatable="false">ADS CARGADOS</string>
     <string name="TG_ADS_NOT_LOADED" translatable="false">ADS NO PERMITIDOS</string>
-    <string name="TAG_ADMOB_AD_STATUS" translatable="false">ADMOB_AD</string>
+    <string name="TAG_ADMOB_AD_STATUS" translatable="false">D/ADMOB_AD: </string>
     <string name="TAG_ADMOB_AD_STATUS_FAILED" translatable="false">FAILED TO LOAD</string>
     <string name="TAG_ADMOB_AD_STATUS_LOADED" translatable="false">ADD LOADED</string>
     <string name="TAG_ADMOB_AD_STATUS_OPEN" translatable="false">ADD OPEN</string>
-    <string name="TAG_NOTIFICATION_CHANGELOG_STATUS" translatable="false">NOTI_CHANGELOG_STATUS
-    </string>
+    <string name="TAG_NOTIFICATION_CHANGELOG_STATUS" translatable="false">D/NOTI_CHANGELOG_STATUS: </string>
     <string name="TAG_NOTIFICATION_CHANGELOG_STATUS_RESPONSE" translatable="false">ENVIADA</string>
     <string name="REWAR_DIALOG_TITLE">¡Apoya a la aplicación!</string>
     <string name="REWARD_DIALOG_MESSAGE">Ve el video, apoya gratis monetariamente y recibe 1 día libre de publicidad</string>
