Traducciones faltantes y optimizacion de xml con avocado
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -102,4 +102,6 @@
     <string name="OCTUBRE">October</string>
     <string name="NOVIEMBRE">November</string>
     <string name="DICIEMBRE">December</string>
+    <string name="change_logs">Version history</string>
+    <string name="ultima_badge">Lastest</string>
 </resources>
