--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <!--<string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
     <string name="ADMOB_ID_VIDEO" translatable="false">ca-app-pub-3940256099942544/5224354917</string>-->
 
+    <!-- LAST CHANGE LOG -->
+    <string name="LAST_CHANGE_LOG" translatable="false"></string>
+
     <!-- TOOLBAR Menu STRINGS -->
     <string name="refresh">Recargar</string>
     <string name="search">Buscar</string>
