Formateo y orden de codigo
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

Took 3 hours 0 minutes

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -70,7 +70,7 @@
     <string name="tab_map">Map</string>
     <string name="tab_list">Quakes</string>
 	<string name="HOME_PARENT">Navigate up</string>
-    <string name="LIST_QUAKE_NUMBER_SUMMARY">Last %1$s quakes</string>
+    <string name="LIST_QUAKE_NUMBER_SUMMARY">Last %1$d quakes</string>
     <string name="quake_list_number_pref_title">Quake data</string>
     <string name="quake_list_number_pref_summary">Number of quakes you want to see</string>
     <string name="last_quakes_info_card_view_description">This list shows the last 15 earthquakes that occurred in Chile, you can modify the amount in the section &#8942; -> Settings</string>
