Anotaciones notnull y actualizacion de dependencias
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

Took 21 minutes

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -100,4 +100,5 @@
     <string name="DICIEMBRE">December</string>
     <string name="change_logs">Version history</string>
     <string name="ultima_badge">Lastest</string>
+    <string name="boton_flotante_twitter">Floating button Twitter</string>
 </resources>
